--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 	<body class="is-preload">
 
 		<!-- Nav -->
-			<nav id="nav">
+			<!--<nav id="nav">
 				<ul class="container">
 					<li><a href="#top">Work Experience</a></li>
 					<li><a href="#work">Projects</a></li>
 					<li><a href="#portfolio">Portfolio</a></li>
 		
 				</ul>
-			</nav>
+			</nav>-->
 
 		<!-- Home -->
 			<article id="top" class="wrapper style1">
