--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 			<article id="top" class="wrapper style1">
 				<div class="container">
 					<div class="row">
-						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="images/headshot.jpg" alt="" /></span>
+						<!--<div class="col-4 col-5-large col-12-medium">-->
+							<span class="image fit"><img src="images/spacex_ucf.png" alt="" /></span>
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
