--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<div class="row">
 						<!--<div class="col-4 col-5-large col-12-medium">-->
 							<span class="image fit"><img src="images/spacex_ucf.png" alt="" /></span>
-						</div>
+						<!--</div>-->
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
 								<h1>Hi. I'm <strong>Aref Abdala</strong>.</h1>
