--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<div class="container">
 					
 						<!--<div class="col-4 col-5-large col-12-medium">-->
-							<span class="image fit"><img src="images/spacex_ucf.png" alt="" /></span>
+							<span class="image-wrapper"><img src="images/spacex_ucf.png" alt="" /></span>
 						<!--</div>-->
 					<div class="row">	
 						<div class="col-8 col-7-large col-12-medium">
