--- a/index.html
+++ b/index.html
@@ -26,10 +26,14 @@
 			</nav>-->
 
 		<!-- Home -->
-			<article id="top" class="wrapper style1">
+			<div style="background-image: url('images/spacex_ucf.png'); 
+  background-size: cover; height:480px; padding-top:80px;">
+  </div>
+  
+		<article id="top" class="wrapper style1">
 				<div class="container">
 					
-						<!--<div class="col-4 col-5-large col-12-medium">-->
+						<!--<div class="col-4 col-5-large col-12-medium">
 							<span class="image-wrapper"><img src="images/spacex_ucf.png" alt="" /></span>
 						<!--</div>-->
 					<div class="row">	
