--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<li><a href="#portfolio">Portfolio</a></li>
 		
 				</ul>
-			</nav>
+			/nav>
 
 		<!-- Home -->
 			<div style="background-image: url('images/spacex_ucf.png'); 
