--- a/index.html
+++ b/index.html
@@ -26,11 +26,10 @@
 			</nav>
 
 		<!-- Home -->
-			<div style="background-image: url('images/spacex_ucf.png'); 
-  background-size: cover; height:480px; padding-top:80px;">
+			<div style="background-image: url('images/spacex_ucf.png'); background-size: cover; height:480px; padding-top:80px;">
   
   
-		<article id="top" class="wrapper style1">
+			<article id="top" class="wrapper style1">
 				<div class="container">
 					
 						<!--<div class="col-4 col-5-large col-12-medium">
@@ -47,6 +46,7 @@
 					</div>
 				</div>
 			</article>
+			</div>
  </div>
 		<!-- Work -->
 			<article id="work" class="wrapper style2">
