--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
 							<span class="image-wrapper"><img src="images/spacex_ucf.png" alt="" /></span>
 						</div>-->
 					<div class="row">	
+						<div class="col-5 col-7-large col-12-medium">
+							<header>
+								<h1>Hi. I'm <strong>Aref Abdala</strong>.</h1>
+							</header>
+							<p>I teach linear circuits and many other classes here at <strong><a href="https://www.ece.ucf.edu/person/chungyong-chan/">UCF</a></strong></p>
+							<a href="#work" class="button large scrolly">RIP your GPA</a>
+						</div>
+					<!--	
+					<div class="row">	
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
 								<h1>Hi. I'm <strong>Aref Abdala</strong>.</h1>
@@ -43,6 +52,7 @@
 							<p>I teach linear circuits and many other classes here at <strong><a href="https://www.ece.ucf.edu/person/chungyong-chan/">UCF</a></strong></p>
 							<a href="#work" class="button large scrolly">RIP your GPA</a>
 						</div>
+						-->
 					</div>
 				</div>
 			</article>
