--- a/index.html
+++ b/index.html
@@ -29,14 +29,15 @@
 			<div style="background-image: url('images/spacex_ucf.png'); background-size: cover; height:480px; padding-top:80px;">
   
   
-			<article id="top" class="image-container">
+			<article id="top" class="image-container" style="color: white;>
 				<div class="container">
 					
 						<!--<div class="col-4 col-5-large col-12-medium">
 							<span class="image-wrapper"><img src="images/spacex_ucf.png" alt="" /></span>
 						</div>-->
-					<div class="row">	
-						<div class="col-5 col-7-large col-12-medium">
+					<div class="row">
+						
+						<div class="col-3 col-7-large col-12-medium">
 							<header>
 								<h1>Hi. I'm <strong>Aref Abdala</strong>.</h1>
 							</header>
