--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<div style="background-image: url('images/spacex_ucf.png'); background-size: cover; height:480px; padding-top:80px;">
   
   
-			<article id="top" class="image-container" style="color: white;>
+			<article id="top" class="image-container" style="color: white">
 				<div class="container">
 					
 						<!--<div class="col-4 col-5-large col-12-medium">
