--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 			<div style="background-image: url('images/spacex_ucf.png'); background-size: cover; height:480px; padding-top:80px;">
   
   
-			<article id="top" class="image-container" style="color: white;">
+			<article id="top" class="image-container" >
 				<div class="container">
 					
 						<!--<div class="col-4 col-5-large col-12-medium">
 							<span class="image-wrapper"><img src="images/spacex_ucf.png" alt="" /></span>
 						</div>-->
-					<div class="row">
+					<div class="row" style="color: white;">
 						
 						<div class="col-3 col-7-large col-12-medium">
 							<header>
