--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						<!--<div class="col-4 col-5-large col-12-medium">
 							<span class="image-wrapper"><img src="images/spacex_ucf.png" alt="" /></span>
 						</div>-->
-					<div class="row" >
+					<div class="row no-gutters" >
 						
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
