--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<h1 style="color: white;"> Hi. I'm <strong>Aref Abdala</strong>.</h1>
+								<h1 style="color: white;" style="margin-bottom:10px;"> Hi. I'm <strong>Aref Abdala</strong>.</h1>
 							</header>
 						<p>I teach linear circuits and many other classes here at <strong><a href="https://www.ece.ucf.edu/person/chungyong-chan/">UCF</a></strong></p>	
 						<a href="#work" class="button large scrolly">RIP your GPA</a>	
