--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 									<p style="margin-bottom:20px;"> Hi. I'm <strong>Aref Abdala</strong>.</p>	
 								</h1>
 							</header>
-						<p>I teach linear circuits and many other classes here at <strong><a href="https://www.ece.ucf.edu/person/chungyong-chan/">UCF</a></strong></p>	
+						<p style="margin-bottom:100px;">I teach linear circuits and many other classes here at <strong><a href="https://www.ece.ucf.edu/person/chungyong-chan/">UCF</a></strong></p>	
 						<a href="#work" class="button large scrolly">RIP your GPA</a>	
 						</div>
 					</div>
