--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
 								<h1 style="color: white;"> 
-									<p style="margin-bottom:20px;"> Hi. I'm <strong>Aref Abdala</strong>.</p>	
+									<p style="margin-top:20px;"> Hi. I'm <strong>Aref Abdala</strong>.</p>	
 								</h1>
 							</header>
-						<p style="margin-bottom:100px;">I teach linear circuits and many other classes here at <strong><a href="https://www.ece.ucf.edu/person/chungyong-chan/">UCF</a></strong></p>	
+						<p style="margin-bottom:130px;">I teach linear circuits and many other classes here at <strong><a href="https://www.ece.ucf.edu/person/chungyong-chan/">UCF</a></strong></p>	
 						<a href="#work" class="button large scrolly">RIP your GPA</a>	
 						</div>
 					</div>
