--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
 								<h1 style="color: white;"> 
-									<p style="margin-top:-50px;"> Hi. I'm <strong>Aref Abdala</strong>.</p>	
+									<p style="margin-top:-50px;"> Hi. I'm <b>Aref Abdala</b>.</p>	
 								</h1>
 							</header>
-						<p style="margin-bottom:220px;"> </p>	
+						<p style="margin-bottom:260px;"> </p>	
 						<a href="#work" class="button large scrolly">RIP your GPA</a>	
 						</div>
 					</div>
