--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
 								<h1 style="color: white;"> 
-									<p style="margin-top:-50px;"> Hi. I'm <b>Aref Abdala</b>.</p>	
+									<p style="margin-top:-50px;"> Hi. I'm <b style="color: white;">Aref Abdala</b>.</p>	
 								</h1>
 							</header>
 						<p style="margin-bottom:260px;"> </p>	
