--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             var address = street + ", " + city + ", " + state;
 
             // Construct the URL for geocoding
-            var geocodingURL = "https://maps.googleapis.com/maps/api/geocode/json?address=" + encodeURIComponent(address) + "&key=YOUR_API_KEY";
+            var geocodingURL = "https://maps.googleapis.com/maps/api/geocode/json?address=" + encodeURIComponent(address) + "f621022ae30542c0899269159155aea1";
 
             // Send a request to the geocoding API
             fetch(geocodingURL)
