--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 "&postcode=" + encodeURIComponent(postcode) +
                 "&city=" + encodeURIComponent(city) +
                 "&country=" + encodeURIComponent(country) +
-                "&apiKey=YOUR_API_KEY";
+                "&apiKey=b53b9da59c7c47a9a04bbd6f9a0a7e48";
 
             // Send a request to the geocoding API
             fetch(geocodingURL)
