--- a/index.html
+++ b/index.html
@@ -173,12 +173,44 @@
    <title>Python HTML app Hello World</title>
 </head>
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MUR Data Download</title>
+</head>
 <body>
-   <py-script>  
-
-print("hello World")
-
-   </py-script>
+    <form id="data-form">
+        <label for="short_name">Short Name:</label>
+        <input type="text" id="short_name" name="short_name" value="MUR-JPL-L4-GLOB-v4.1" required>
+        <br>
+        <label for="cloud_hosted">Cloud Hosted:</label>
+        <input type="checkbox" id="cloud_hosted" name="cloud_hosted" checked>
+        <br>
+        <label for="temporal">Temporal Range:</label>
+        <input type="text" id="temporal" name="temporal" value="2023-01-01,2023-01-01" required>
+        <br>
+        <button type="submit">Download Data</button>
+    </form>
+    <script>
+        const form = document.getElementById('data-form');
+        form.addEventListener('submit', async (event) => {
+            event.preventDefault();
+            const formData = new FormData(form);
+            const short_name = formData.get('short_name');
+            const cloud_hosted = formData.get('cloud_hosted') === 'on';
+            const temporal = formData.get('temporal').split(',');
+            const response = await fetch('/download-data', {
+                method: 'POST',
+                body: JSON.stringify({ short_name, cloud_hosted, temporal }),
+                headers: {
+                    'Content-Type': 'application/json'
+                }
+            });
+            const results = await response.json();
+            // Display the results to the user
+            // ...
+        });
+    </script>
 </body>
 
 							
